// Generated by j5build v0.0.0-20250801192111-61f853c07a23+dirty. DO NOT EDIT

syntax = "proto3";

package o5.ges.v1.topic;

import "buf/validate/validate.proto";
import "google/protobuf/empty.proto";
import "j5/ext/v1/annotations.proto";
import "j5/messaging/v1/annotations.proto";

service ReplayTopic {
  option (j5.messaging.v1.service) = {
    topic_name: "replay"
    publish: {
    }
  };

  rpc Events(EventsMessage) returns (google.protobuf.Empty) {}

  rpc Upserts(UpsertsMessage) returns (google.protobuf.Empty) {}

  rpc Generic(GenericMessage) returns (google.protobuf.Empty) {}
}

message EventsMessage {
  option (j5.ext.v1.message).object = {};

  string queue_url = 1 [
    (buf.validate.field).required = true,
    (j5.ext.v1.field).string = {}
  ];

  string grpc_service = 2 [
    (buf.validate.field).required = true,
    (j5.ext.v1.field).string = {}
  ];

  string grpc_method = 3 [
    (buf.validate.field).required = true,
    (j5.ext.v1.field).string = {}
  ];
}

message UpsertsMessage {
  option (j5.ext.v1.message).object = {};

  string queue_url = 1 [
    (buf.validate.field).required = true,
    (j5.ext.v1.field).string = {}
  ];

  string grpc_service = 2 [
    (buf.validate.field).required = true,
    (j5.ext.v1.field).string = {}
  ];

  optional string grpc_method = 3 [(j5.ext.v1.field).string = {}];
}

message GenericMessage {
  option (j5.ext.v1.message).object = {};

  string queue_url = 1 [
    (buf.validate.field).required = true,
    (j5.ext.v1.field).string = {}
  ];

  string grpc_service = 2 [
    (buf.validate.field).required = true,
    (j5.ext.v1.field).string = {}
  ];

  optional string grpc_method = 3 [(j5.ext.v1.field).string = {}];
}
